UI for button and replacement of the planets by image only

--- a/src/SpaceSimulation.css
+++ b/src/SpaceSimulation.css
@@ -6,3 +6,15 @@ button {
     cursor: pointer;
     outline: none;
 }
+
+.popUp {
+    position: absolute;
+    right: 35%;
+    left: 25%;
+    top: 50%;
+    width: 50%;
+}
+
+.popUp > h1 {
+    color: red;
+}
