--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,13 @@ body{
   overflow: hidden;
 }
 
+.App {
+  top: 0;
+  margin: 0;
+  padding: 0;
+  height: 20px;
+}
+
 
 div > h1 {
     color: white;
@@ -21,7 +28,7 @@ div > h1 {
     padding: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     position: absolute;
-    top: 9%;
+    top: 8%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
